Strip trailing / of dbpath on windows SERVER-3557