db/db.cpp
@@ -708,6 +708,12 @@ int main(int argc, char* argv[]) {
         else {
             dbpath = "/data/db/";
         }
+#ifdef _WIN32
+        if (dbpath.size() > 1 && dbpath[dbpath.size()-1] == '/') {
+            // size() check is for the unlikely possibility of --dbpath "/"
+            dbpath = dbpath.erase(dbpath.size()-1);
+        }
+#endif
 
         if ( params.count("directoryperdb")) {
             directoryperdb = true;
